--- a/ram_workshop/ram-paper.tex
+++ b/ram_workshop/ram-paper.tex
@@ -72,7 +72,7 @@
 \setlength{\abovecaptionskip}{5pt} % Chosen fairly arbitrarily
 \setlength{\belowcaptionskip}{5pt} % Chosen fairly arbitrarily
 
-\vspace*{-1.0cm}
+%\vspace*{-1.0cm}
 \title{Generating Images from Captions with Attention}
 
 \vspace*{-1.0cm}
@@ -129,13 +129,13 @@ While all of the previous work has been focused on unconditional models or model
 \vspace{-0.1in}
 \section{Model}
 
-Let $\icaption$ be the input caption, consisting of $N$ words $y_{1}, y_{2}, ..., y_{N}$, and $\oimage$ be the output image. Our proposed model 
+Our proposed model 
 defines a generative process of images conditioned on the caption. In particular, captions are represented as a sequence of consecutive words and images are represented as a sequence of patches drawn on canvas over time $t=1,...,T$. Our model can be viewed as utilizing the  sequence-to-sequence framework \citep{ilya_mt}.  
 
 \vspace{-0.1in}
 \subsection{Language Representation: the Bidirectional Attention RNN}
 \label{sec:lang}
-We obtain the caption sentence representation by first transforming each word $y_{1},...,y_{N}$ to a vector representation using the Bidirectional RNN. In a Bidirectional RNN, the two LSTMs process the input sequence from both forward and backward directions. They produce the hidden states sequences $[\overrightarrow{h}^{lang}_{1}, \overrightarrow{h}^{lang}_{2}, ..., \overrightarrow{h}^{lang}_{N}]$ and $[\overleftarrow{h}^{lang}_{1}, \overleftarrow{h}^{lang}_{2}, ..., \overleftarrow{h}^{lang}_{N}]$ respectively. These hidden states are then concatenated together into the final sentence representation $\hlangall = [\hlang_{1}, \hlang_{2}, ..., \hlang_{N}]$, where $\hlang_{n} = [\overrightarrow{h}^{lang}_{n}, \overleftarrow{h}^{lang}_{n}], 1\leq n\leq N$.
+Let $\icaption$ be the input caption, consisting of $N$ words $y_{1}, y_{2}, ..., y_{N}$, and $\oimage$ be the output image. We obtain the caption sentence representation by first transforming each word $y_{1},...,y_{N}$ to a vector representation using the Bidirectional RNN. In a Bidirectional RNN, the two LSTMs process the input sequence from both forward and backward directions. They produce the hidden states sequences $[\overrightarrow{h}^{lang}_{1}, \overrightarrow{h}^{lang}_{2}, ..., \overrightarrow{h}^{lang}_{N}]$ and $[\overleftarrow{h}^{lang}_{1}, \overleftarrow{h}^{lang}_{2}, ..., \overleftarrow{h}^{lang}_{N}]$ respectively. These hidden states are then concatenated together into the final sentence representation $\hlangall = [\hlang_{1}, \hlang_{2}, ..., \hlang_{N}]$, where $\hlang_{n} = [\overrightarrow{h}^{lang}_{n}, \overleftarrow{h}^{lang}_{n}], 1\leq n\leq N$.
 
 \vspace{-0.1in}
 \subsection{Image Modelling: the Conditional alignDRAW Network}
@@ -259,11 +259,11 @@ First, we wanted to see whether the model understood one of the most basic prope
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-blue-school-bus-parked-in-a-parking-lot-sharp.png}}\quad
 %
 \end{center}
+\vspace{-0.3cm}
 \caption{Examples of changing the color while keeping the caption fixed.}
 \label{fig:genimages1}
-\vspace{-0.6cm}
+\vspace{-0.3cm}
 \end{figure}
-
 Apart from changing the colors of objects, we experimented with changing the background of the scene described in a caption to see whether this would result in the appropriate changes in the generated samples. The task of changing the background of an image is somewhat harder than just changing the color of an object because the model will have to make alterations over a wider visual area. Nevertheless, as shown in Figure~\ref{fig:genimages2}, changing the skies from blue to rainy in a caption as well as changing the grass type from dry to green in another caption resulted in the appropriate changes in the generated image. The nearest images from the training set also indicate that the model was not simply copying the patterns it observed during the learning phase.
 
 \vspace{-0.5cm}
@@ -292,9 +292,10 @@ Apart from changing the colors of objects, we experimented with changing the bac
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-sharp.png}}\quad
 %
 \end{center}
+\vspace{-0.3cm}
 \caption{{\bf Bottom}: Examples of changing the background while keeping the caption fixed. {\bf Top}: The respective nearest training images based on pixel-wise L2 distance.}
 \label{fig:genimages2}
-\vspace{-0.4cm}
+\vspace{-0.3cm}
 \end{figure}
 
 Despite some success with changing colors and backgrounds in descriptions, the model struggled when the visual difference between objects was very small, such as when the objects have the same general shape and color. In Figure~\ref{fig:genimages3}, we demonstrate that when we swap two objects that are both visually similar, for example cats and dogs, it is difficult to discriminate solely from the generated samples whether it is an image of a cat or dog, even though we might notice an animal-like shape.
@@ -315,6 +316,7 @@ Despite some success with changing colors and backgrounds in descriptions, the m
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-dog-sharp.png}}\quad
 %
 \end{center}
+\vspace{-0.3cm}
 \caption{Examples of changing the object while keeping the caption fixed.}
 \label{fig:genimages3}
 \vspace{-0.3cm}
@@ -350,7 +352,7 @@ During the generation step, the model mostly focused on the specific words that 
 % \vspace{-0.3cm}
 % \end{table}
 
-\vspace{-0.5cm}
+%\vspace{-0.3cm}
 \begin{figure}[!h]
 \vspace{-0.5cm}
 \captionsetup[subfigure]{labelformat=empty}
@@ -368,6 +370,7 @@ During the generation step, the model mostly focused on the specific words that 
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-sharp.png}}\quad
 %
 \end{center}
+\vspace{-0.3cm}
 \caption{Examples of most attended words while changing the background in the caption.}
 \label{fig:attentimages1}
 \vspace{-0.4cm}
@@ -390,9 +393,10 @@ To compare performances of different generative models, we report results on two
 \subfloat[Fully-conn. VAE]{\includegraphics[width=0.23\textwidth]{figures/a-group-of-people-walk-on-a-beach-with-surf-boards-fcvae-small.png}}\quad
 %
 \end{center}
-\caption{Four different models displaying results from sampling caption ``A group of people walk on a beach with surf boards". LAPGAN samples look more noisy and it is harder to make out definite objects, whereas the images generated by variational models trained with L2 cost function have a watercolor effect.}
+\vspace{-0.3cm}
+\caption{alignDRAW and three baseline models conditioned on skip-thoughts \cite{skip-thought} displaying results from sampling caption ``A group of people walk on a beach with surf boards". LAPGAN samples look more noisy and it is harder to make out definite objects, whereas the images generated by variational models trained with L2 cost function have a watercolor effect.}
 \label{fig:diffmodels}
-\vspace{-0.4cm}
+\vspace{-0.3cm}
 \end{figure}
 
 In Figure~\ref{fig:diffmodels}, we generated several samples from the prior of each of the current state-of-the-art generative models, conditioned on the caption ``A group of people walk on a beach with surf boards".
@@ -402,7 +406,7 @@ likelihood conditioned on the caption to image likelihood conditioned on the mea
 We found that the lower bound of the test log-probability decreased for sharpened images, which considerably hurt the retrieval.
 
 In addition we calculate Structural Similarity Index (SSI), which incorporates luminance and contrast masking into the error calculation. The metric is also calculated on small windows of the image. We sampled 50 images from the prior of each generative model for every test caption and calculated SSI, which is reported in Table~\ref{tab:results}.
-
+\vspace{-0.12in}
 \begin{table}[!h]
 \small
 \begin{center}
@@ -429,7 +433,7 @@ alignDRAW & \textbf{3.0} & 14.0 & 22.9 & \textbf{68.5} & \textbf{31} & 0.156 \\ 
 \label{tab:results}
 \vspace{-0.3cm}
 \end{table}
-
+\vspace{-0.3in}
 {\footnotesize
 \bibliography{ram-paper}}
 
